# quaternion-core

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  RELEASES.md  build.rs
src/: euler.rs  generics.rs  lib.rs  pfs.rs  private_functions.rs  simd.rs
src/to_fast/: mod.rs
tests/: lib.rs
