[package]
name = "quaternion-core"
version = "0.5.0"
authors = ["HamaguRe <hamagure@space-denpa.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/HamaguRe/quaternion-core.git"
homepage = "https://github.com/HamaguRe/quaternion-core.git"
documentation = "https://docs.rs/quaternion-core"
description = "Provides quaternion operations and interconversion with several attitude representations."
keywords = ["math", "quaternion", "vector"]
categories = ["mathematics", "science", "no-std"]
readme = "README.md"
exclude = [".gitignore", "conversion.png"]

[features]
default = ["std"]
std = ["num-traits/std"]
fma = []
libm = ["num-traits/libm"]
norm-sqrt = []
serde-serialize = ["serde"]

[dependencies.serde]
version = "^1.0.193"
features = ["derive"]
optional = true

[dependencies.num-traits]
version = "0.2.17"
default-features = false
